<resources>
    <string name="app_name">DIU Faculty Info</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">toukir15-1194@diu.edu.bd</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">About</string>
    <string name="menu_slideshow">Exit</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="fsit">Faculty of Science and Information Technology</string>
    <string name="fbe">Faculty of Business and Entrepreneurship</string>
    <string name="fe">Faculty of Engineering</string>
    <string name="fahs">Faculty of Allied Health Science</string>
    <string name="fhss">Faculty of Humanities and Social Science</string>


    <string name="cse">Computer Science and Engineering</string>
    <string name="cis">Computing and Information System</string>
    <string name="se">Software Engineering</string>
    <string name="esdm">Environmental Science and Disaster Management</string>
    <string name="ged">General Educational Development</string>


    <string name="ba">Business Administration</string>
    <string name="bs">Business Studies</string>
    <string name="re">Real Estate</string>
    <string name="thm">Tourism and Hospitality Management</string>
    <string name="ie">Innovation and Entrepreneurship</string>

    <string name="ete">Electronics and Telecommunication Engineering</string>
    <string name="te">Textile Engineering</string>
    <string name="eee">Electrical and Electronic Engineering</string>
    <string name="arch">Architecture</string>
    <string name="ce">Civil Engineering</string>


    <string name="phar">Pharmacy</string>
    <string name="ph">Public Health</string>
    <string name="nfe">Nutrition and Food Engineering</string>


    <string name="eng">English</string>
    <string name="law">Law</string>
    <string name="jmc">Journalism and Mass Communication</string>
    <string name="ds">Development Studies</string>
    <string name="islm">Information Science and Library Management</string>


</resources>
