<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <androidx.cardview.widget.CardView
            android:onClick="metod_fecv1"
            android:id="@+id/fecv1"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            card_view:cardBackgroundColor="#C0C0C0"
            card_view:cardCornerRadius="20dp"
            card_view:cardElevation="30dp"
            card_view:contentPadding="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:minHeight="200dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/ete"
                    android:textColor="#154360"
                    android:textSize="26dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:onClick="metod_fecv2"
            android:id="@+id/fecv2"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            card_view:cardBackgroundColor="#C0C0C0"
            card_view:cardCornerRadius="20dp"
            card_view:cardElevation="30dp"
            card_view:contentPadding="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:minHeight="200dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="95dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/te"
                    android:textColor="#154360"
                    android:textSize="40dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:onClick="metod_fecv3"
            android:id="@+id/fecv3"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            card_view:cardBackgroundColor="#C0C0C0"
            card_view:cardCornerRadius="20dp"
            card_view:cardElevation="30dp"
            card_view:contentPadding="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:minHeight="200dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="95dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/eee"
                    android:textColor="#154360"
                    android:textSize="30dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:onClick="metod_fecv4"
            android:id="@+id/fecv4"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            card_view:cardBackgroundColor="#C0C0C0"
            card_view:cardCornerRadius="20dp"
            card_view:cardElevation="30dp"
            card_view:contentPadding="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:minHeight="200dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/arch"
                    android:textColor="#154360"
                    android:textSize="40dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="metod_fecv5"
            android:id="@+id/fecv5"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:minHeight="200dp"
            card_view:cardBackgroundColor="#C0C0C0"
            card_view:cardCornerRadius="20dp"
            card_view:cardElevation="30dp"
            card_view:contentPadding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="95dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="95dp"
                    android:text="@string/ce"
                    android:textColor="#154360"
                    android:textSize="40dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>